Running "ng update @angular/core @angular/cli --force"

--- a/angular.json
+++ b/angular.json
@@ -11,6 +11,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -44,11 +45,23 @@
           },
           "configurations": {
             "dev": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "sourceMap": true,
               "extractCss": true,
               "fileReplacements": []
             },
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": true,
@@ -167,6 +180,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "build/buildBundle/dist",
             "index": "src/index.html",
             "main": "src/app/builder/main.builder.ts",
@@ -193,6 +207,12 @@
           },
           "configurations": {
             "dev": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/configuration/configuration.ts",
@@ -201,6 +221,12 @@
               ]
             },
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -282,6 +308,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "build/buildBundle/dist",
             "index": "src/app/builder/dev/index.html",
             "main": "src/app/builder/dev/builder-dev.main.ts",
@@ -310,6 +337,12 @@
           },
           "configurations": {
             "dev": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/configuration/configuration.ts",
@@ -318,6 +351,12 @@
               ]
             },
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -406,7 +445,8 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/ansyn/ng-package.json"
-            }
+            ,              "tsConfig": "src/app/@ansyn/ansyn/tsconfig.lib.prod.json"
+}
           }
         }
       }
@@ -426,7 +466,8 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/map-facade/ng-package.json"
-            }
+            ,              "tsConfig": "src/app/@ansyn/map-facade/tsconfig.lib.prod.json"
+}
           }
         }
       }
@@ -446,7 +487,8 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/ol/ng-package.json"
-            }
+            ,              "tsConfig": "src/app/@ansyn/ol/tsconfig.lib.prod.json"
+}
           }
         }
       }
@@ -466,7 +508,8 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/imagery-cesium/ng-package.json"
-            }
+            ,              "tsConfig": "src/app/@ansyn/imagery-cesium/tsconfig.lib.prod.json"
+}
           }
         }
       }
@@ -486,7 +529,8 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/imagery-video/ng-package.json"
-            }
+            ,              "tsConfig": "src/app/@ansyn/imagery-video/tsconfig.lib.prod.json"
+}
           }
         }
       }
@@ -506,7 +550,8 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/imagery/ng-package.json"
-            }
+            ,              "tsConfig": "src/app/@ansyn/imagery/tsconfig.lib.prod.json"
+}
           }
         }
       }
@@ -526,7 +571,8 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/menu/ng-package.json"
-            }
+            ,              "tsConfig": "src/app/@ansyn/menu/tsconfig.lib.prod.json"
+}
           }
         }
       }
@@ -536,7 +582,7 @@
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "ansyn",
-      "styleext": "less"
+      "style": "less"
     },
     "@schematics/angular:directive": {
       "prefix": "ansyn"
