--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "update": "ng update @angular/core @angular/cli"
   },
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "~9.1.0",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/elements": "^8.2.14",
-    "@angular/forms": "~8.2.14",
+    "@angular/common": "~9.1.0",
+    "@angular/compiler": "~9.1.0",
+    "@angular/core": "~9.1.0",
+    "@angular/elements": "^9.1.0",
+    "@angular/forms": "~9.1.0",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/platform-browser": "~9.1.0",
+    "@angular/platform-browser-dynamic": "~9.1.0",
+    "@angular/router": "~9.1.0",
     "@ansyn/event-drops": "^0.2.8-1.9",
     "@ansyn/ng-pick-datetime": "^7.1.0",
     "@auth0/angular-jwt": "^4.0.0",
@@ -78,17 +78,17 @@
     "primeng": "^6.1.4",
     "proj4": "^2.5.0",
     "rison": "^0.1.1",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "wellknown": "^0.5.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular-devkit/build-ng-packagr": "~0.803.4",
-    "@angular/cli": "~8.3.21",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-ng-packagr": "~0.901.0",
+    "@angular/cli": "~9.1.0",
+    "@angular/compiler-cli": "~9.1.0",
+    "@angular/language-service": "~9.1.0",
     "@types/auth0-js": "^8.11.5",
     "@types/cesium": "^1.47.3",
     "@types/d3": "^4.13.1",
@@ -97,10 +97,10 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14.88",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.11.1",
     "@types/rison": "0.0.6",
     "@types/wellknown": "0.5.0",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.1.2",
     "find-in-files": "0.4.0",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
@@ -124,7 +124,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^4.7.1",
+    "ng-packagr": "^9.0.0",
     "pre-commit": "1.2.2",
     "protractor": "~5.4.0",
     "protractor-screenshoter-plugin": "^0.5.0",
@@ -132,7 +132,7 @@
     "ts-node": "~7.0.0",
     "tslib": "^1.7.1",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   },
   "precommit": [
     "fix-all"
