--- a/src/tsconfig.builder.json
+++ b/src/tsconfig.builder.json
@@ -2,11 +2,13 @@
 	"extends": "../tsconfig.json",
 	"compilerOptions": {
 		"outDir": "../out-tsc/app",
-		"module": "es2015",
 		"types": []
 	},
-	"exclude": [
-		"test.ts",
-		"**/*.spec.ts"
-	]
+  "files": [
+    "app/builder/main.builder.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
