Add npm script to run on port 4201

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "log": "git log master --pretty=format:\\\"%an\\\",\\\"%ai\\\",\\\"%s\\\",\\\"%H\\\" > log.csv && echo Commiter, Date, Message, Hash | cat - log.csv > log2.csv && mv log2.csv log.csv",
     "ng": "ng",
     "start": "node scripts/generate-config.js && ng serve",
+    "start_1": "node scripts/generate-config.js && ng serve --port 4201",
     "start:aot": "ng serve --aot true",
     "start:builder-dev": "ng s --app builder-dev",
     "test": "ng test",
