--- a/src/app/@ansyn/map-facade/package.json
+++ b/src/app/@ansyn/map-facade/package.json
@@ -15,7 +15,8 @@
 		"lodash": "^4.17.15",
 		"angular2-uuid": "^1.1.1",
 		"auto-subscriptions": "^2.0.5",
-		"file-saver": "^1.3.8"
+		"file-saver": "^1.3.8",
+		"dom-to-image": "^2.6.0"
 	},
 	"license": "MIT"
 }
