--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "angular2-uuid": "^1.1.1",
     "auth0-js": "^9.7.3",
     "auto-subscriptions": "^2.0.5",
-    "cesium": "^1.66.0",
+    "cesium": "^1.69.0",
     "core-js": "^2.5.4",
     "crypto-js": "3.1.9-1",
     "d3": "^5.9.2",
@@ -70,9 +70,10 @@
     "gl-matrix": "^2.8.1",
     "lodash": "^4.17.15",
     "lodash-decorators": "^4.5.0",
+    "material-community-components": "^6.0.1",
     "mathjs": "^5.4.1",
     "moment": "^2.21.0",
-    "ngx-bootstrap": "^5.5.0",
+    "ngx-bootstrap": "^5.6.2",
     "ngx-color-picker": "^7.5.0",
     "ngx-device-detector": "^1.4.1",
     "ngx-treeview": "^6.0.2",
@@ -92,7 +93,7 @@
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
     "@types/auth0-js": "^8.11.5",
-    "@types/cesium": "^1.47.3",
+    "@types/cesium": "^1.67.10",
     "@types/d3": "^4.13.1",
     "@types/file-saver": "^1.3.0",
     "@types/geojson": "7946.0.3",
