--- a/src/app/@ansyn/ansyn/tsconfig.json
+++ b/src/app/@ansyn/ansyn/tsconfig.json
@@ -8,7 +8,7 @@
       "@ansyn/map-facade": [
         "src/app/@ansyn/map-facade/public_api"
       ],
-      "@ansyn/ol": [
+      "@ansyn/imagery-ol": [
         "src/app/@ansyn/imagery-submodules/imagery-ol/public_api"
       ],
       "@ansyn/imagery-cesium": [
