--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "@ansyn/map-facade": [
         "src/app/@ansyn/map-facade/public_api"
       ],
-      "@ansyn/ol": [
+      "@ansyn/imagery-ol": [
         "src/app/@ansyn/imagery-submodules/imagery-ol/public_api"
       ],
       "@ansyn/imagery-cesium": [
