--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,11 @@ before_script:
   #- apt-get install graphicsmagick # for e2e screenshots
 
 script:
-  - npm run build:submodules:libs
+  - npm run lint:submodules
   - npm run lint
+  - npm run test:single-run:submodules
   - npm run test:single-run
+  - npm run build:submodules:libs
   - npm run build:libs
   - sh -x scripts/build.sh ansyn $TRAVIS_COMMIT $TRAVIS_TAG
 
