--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fix-package-json": "node scripts/fix-package-json",
     "generate-config": "node scripts/generate-config.js",
     "lint": "ng lint ansyn --type-check",
+    "lint:submodules": "bash scripts/submodules-linting.sh",
     "log": "git log master --pretty=format:\\\"%an\\\",\\\"%ai\\\",\\\"%s\\\",\\\"%H\\\" > log.csv && echo Commiter, Date, Message, Hash | cat - log.csv > log2.csv && mv log2.csv log.csv",
     "ng": "ng",
     "start": "node scripts/generate-config.js && ng serve",
@@ -30,6 +31,7 @@
     "test": "ng test",
     "test:e2e": "node scripts/generate-config.js && ng e2e ansyn-e2e",
     "test:single-run": "ng test ansyn --watch=false",
+    "test:single-run:submodules": "bash scripts/submodules-testing.sh",
     "testCompile": "cd build && gulp testCompile",
     "update": "ng update @angular/core @angular/cli"
   },
@@ -83,6 +85,7 @@
     "proj4": "^2.5.0",
     "rison": "^0.1.1",
     "rxjs": "~6.5.4",
+    "tsickle": "^0.38.1",
     "tslib": "^1.10.0",
     "wellknown": "^0.5.0",
     "zone.js": "~0.10.2"
