--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "showCircularDependencies": true,
             "polyfills": "src/polyfills.ts",
-            "assets": [
-              {
+            "assets": [{
                 "glob": "**/*",
                 "input": "src/app/@ansyn/ansyn/assets",
                 "output": "/assets"
@@ -48,23 +47,19 @@
           },
           "configurations": {
             "dev": {
-              "budgets": [
-                {
+              "budgets": [{
                 "type": "anyComponentStyle",
                 "maximumWarning": "6kb"
-                }
-              ],
+              }],
               "sourceMap": true,
               "extractCss": true,
               "fileReplacements": []
             },
             "production": {
-              "budgets": [
-                {
+              "budgets": [{
                 "type": "anyComponentStyle",
                 "maximumWarning": "6kb"
-                }
-              ],
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": true,
@@ -74,12 +69,10 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": false,
-              "fileReplacements": [
-                {
+              "fileReplacements": [{
                 "replace": "src/configuration/configuration.ts",
                 "with": "src/configuration/configuration.prod.ts"
-                }
-              ]
+              }]
             }
           }
         },
@@ -124,8 +117,7 @@
                 "src/app/@ansyn"
               ]
             },
-            "assets": [
-              {
+            "assets": [{
                 "glob": "**/*",
                 "input": "src/app/@ansyn/ansyn/assets",
                 "output": "/assets"
@@ -198,8 +190,7 @@
                 "src/app/@ansyn"
               ]
             },
-            "assets": [
-              {
+            "assets": [{
                 "glob": "**/*",
                 "input": "src/app/@ansyn/ansyn/assets",
                 "output": "/assets"
@@ -213,26 +204,20 @@
           },
           "configurations": {
             "dev": {
-              "budgets": [
-                {
+              "budgets": [{
                 "type": "anyComponentStyle",
                 "maximumWarning": "6kb"
-                }
-              ],
-              "fileReplacements": [
-                {
+              }],
+              "fileReplacements": [{
                 "replace": "src/configuration/configuration.ts",
                 "with": "src/configuration/configuration.dev.ts"
-                }
-              ]
+              }]
             },
             "production": {
-              "budgets": [
-                {
+              "budgets": [{
                 "type": "anyComponentStyle",
                 "maximumWarning": "6kb"
-                }
-              ],
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -242,12 +227,10 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "fileReplacements": [
-                {
+              "fileReplacements": [{
                 "replace": "src/configuration/configuration.ts",
                 "with": "src/configuration/configuration.prod.ts"
-                }
-              ]
+              }]
             }
           }
         },
@@ -282,8 +265,7 @@
             "styles": [
               "src/app/@ansyn/ansyn/assets/styles/styles.css"
             ],
-            "assets": [
-              {
+            "assets": [{
                 "glob": "**/*",
                 "input": "src/app/@ansyn/ansyn/assets",
                 "output": "/assets"
@@ -326,8 +308,7 @@
                 "src/app/@ansyn"
               ]
             },
-            "assets": [
-              {
+            "assets": [{
                 "glob": "**/*",
                 "input": "src/app/@ansyn/ansyn/assets",
                 "output": "/assets"
@@ -343,26 +324,20 @@
           },
           "configurations": {
             "dev": {
-              "budgets": [
-                {
+              "budgets": [{
                 "type": "anyComponentStyle",
                 "maximumWarning": "6kb"
-                }
-              ],
-              "fileReplacements": [
-                {
+              }],
+              "fileReplacements": [{
                 "replace": "src/configuration/configuration.ts",
                 "with": "src/configuration/configuration.dev.ts"
-                }
-              ]
+              }]
             },
             "production": {
-              "budgets": [
-                {
+              "budgets": [{
                 "type": "anyComponentStyle",
                 "maximumWarning": "6kb"
-                }
-              ],
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -372,12 +347,10 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "fileReplacements": [
-                {
+              "fileReplacements": [{
                 "replace": "src/configuration/configuration.ts",
                 "with": "src/configuration/configuration.prod.ts"
-                }
-              ]
+              }]
             }
           }
         },
@@ -412,8 +385,7 @@
             "styles": [
               "src/app/@ansyn/ansyn/assets/styles/styles.css"
             ],
-            "assets": [
-              {
+            "assets": [{
                 "glob": "**/*",
                 "input": "src/app/@ansyn/ansyn/assets",
                 "output": "/assets"
