--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:submodules": "bash scripts/submodules-linting.sh",
     "log": "git log master --pretty=format:\\\"%an\\\",\\\"%ai\\\",\\\"%s\\\",\\\"%H\\\" > log.csv && echo Commiter, Date, Message, Hash | cat - log.csv > log2.csv && mv log2.csv log.csv",
     "ng": "ng",
-    "start": "node scripts/generate-config.js && ng serve",
+    "start": "node scripts/generate-config.js && node --max_old_space_size=20000 ./node_modules/@angular/cli/bin/ng serve",
     "start_1": "node scripts/generate-config.js && ng serve --port 4201",
     "start:aot": "ng serve --aot true",
     "start:builder-dev": "ng s --app builder-dev",
@@ -61,7 +61,7 @@
     "angular2-uuid": "^1.1.1",
     "auth0-js": "^9.7.3",
     "auto-subscriptions": "^2.0.5",
-    "cesium": "^1.69.0",
+    "cesium": "^1.70.1",
     "core-js": "^2.5.4",
     "crypto-js": "3.1.9-1",
     "d3": "^5.9.2",
