--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,13 @@ before_script:
   #- apt-get install graphicsmagick # for e2e screenshots
 
 script:
-  - npm run lint:submodules
-  - npm run lint
+#  - npm run lint:submodules
+#  - npm run lint
   # - npm run test:single-run:submodules
-  - npm run test:single-run
-  - npm run build:submodules:libs
-  - npm run build:libs
-  - travis_wait 20 sh -x scripts/build.sh ansyn $TRAVIS_COMMIT $TRAVIS_TAG
+#  - npm run test:single-run
+#  - npm run build:submodules:libs
+#  - npm run build:libs
+  - sh -x scripts/build.sh ansyn $TRAVIS_COMMIT $TRAVIS_TAG
 
 cache:
   directories:
