return to previus angular json state

--- a/angular.json
+++ b/angular.json
@@ -67,8 +67,8 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": false,
+              "sourceMap": true,
+              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
